--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -11,22 +11,42 @@
   border-radius: 4px;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 
-  .swiper-button-prev,
-  .swiper-button-next {
-    top: 22px;
-    height: 100%;
-    opacity: 0;
-    cursor: pointer;
-
-    &::after {
-      font-size: 12px;
-      font-weight: bold;
-      color: #fff;
-    }
-  }
-
   &__slider {
     position: relative;
+
+    #{$self}__slide {
+      &::after {
+        position: absolute;
+        z-index: 10;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        content: '';
+        box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
+          50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
+        transition: $tr-fast;
+      }
+    }
+
+    #{$self}__slider-img {
+      display: block;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      top: 22px;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+
+      &::after {
+        font-size: 12px;
+        font-weight: bold;
+        color: #fff;
+      }
+    }
 
     &:hover {
       #{$self}__slide {
@@ -44,11 +64,6 @@
         opacity: 0.35;
       }
     }
-  }
-
-  &__pagination {
-    padding-right: 15px;
-    text-align: right;
   }
 
   .swiper-pagination {
@@ -77,27 +92,6 @@
     &:last-child {
       margin-right: 0;
     }
-  }
-
-  &__slide {
-    &::after {
-      position: absolute;
-      z-index: 10;
-      top: 0;
-      display: block;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      content: '';
-      box-shadow:
-        -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
-        50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
-      transition: $tr-fast;
-    }
-  }
-
-  &__slider-img {
-    display: block;
   }
 
   &__content {
