--- a/src/components/circle-diagram/circle-diagram.pug
+++ b/src/components/circle-diagram/circle-diagram.pug
@@ -7,7 +7,7 @@ mixin circle-diagram(data)
       .circle-diagram__voices
         .circle-diagram__num 
           | 0
-      .circle-diagram__wrapper
+      .circle-diagram__diagram-wrapper
         canvas(id="CircleDiagram")
     ul.circle-diagram__list
       each val in voices
