--- a/src/components/masked-text-field/masked-text-field.scss
+++ b/src/components/masked-text-field/masked-text-field.scss
@@ -2,6 +2,18 @@
   display: block;
   max-width: 320px;
 
+  $self: &;
+
+  &:hover & {
+    #{$self}__input {
+      border: $border-input-hover;
+
+      &::placeholder {
+        color: $text-color-brightness-75;
+      }
+    }
+  }
+
   &__title {
     font-size: 12px;
     font-weight: bold;
@@ -30,16 +42,6 @@
     &:focus {
       border: $border-input-hover;
       outline: none;
-
-      &::placeholder {
-        color: $text-color-brightness-75;
-      }
-    }
-  }
-
-  &:hover & {
-    &__input {
-      border: $border-input-hover;
 
       &::placeholder {
         color: $text-color-brightness-75;
