--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -16,7 +16,7 @@
     @include container;
   }
 
-  &__main {
+  &__content {
     padding: 171px 0 173px 0;
     display: flex;
     justify-content: center;
