--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -14,7 +14,7 @@ mixin card-selection()
             titleSecond: "выезд"
             })
         .card-selection__guests
-          span.block-title
+          label(for='input-guests').card-selection__guests-title 
             | Гости
           +dropdown-choose({className: "dropdown-guests js-dropdown-guests", title:"Гости"})
         +button({
