--- a/src/components/circle-diagram/circle-diagram.scss
+++ b/src/components/circle-diagram/circle-diagram.scss
@@ -20,13 +20,6 @@
     align-items: center;
   }
 
-  &__wrapper {
-    position: absolute;
-    z-index: 10;
-    width: 125px;
-    height: 124px;
-  }
-
   &__voices {
     position: relative;
     top: -9px;
@@ -46,6 +39,13 @@
     font-size: 24px;
     line-height: 29px;
     font-style: normal;
+  }
+
+  &__diagram-wrapper {
+    position: absolute;
+    z-index: 10;
+    width: 125px;
+    height: 124px;
   }
 
   &__list {
