--- a/src/components/filter-date/filter-date.pug
+++ b/src/components/filter-date/filter-date.pug
@@ -1,5 +1,5 @@
-mixin filter-date({ className })
+mixin filter-date()
   .filter-date
-    label.filter-date__label
-      input(type="text" placeholder="от и до" class=className readonly required name="dates-rage-input").filter-date__input.js-filter-date__input
-      div.filter-date__arrow
+    .filter-date__input-wrapper
+      input(type="text" placeholder="от и до" readonly required name="dates-rage-input").filter-date__input.js-filter-date__input
+      span.filter-date__arrow
