--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -4,6 +4,25 @@
   @media screen and (max-width: $sm-desktop-width) {
     margin-right: 0;
   }
+
+  &__container {
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    margin: 0 auto;
+    margin-top: 10px;
+    display: inline-block;
+    overflow: hidden;
+    max-width: 320px;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    color: $text-color-brightness-75;
+
+    @media (max-width: $phone-width) {
+      font-size: 12px;
+    }
+  }
 }
 
 .page-link {
@@ -19,20 +38,6 @@
 .pagination__arrow-forward {
   width: 18px;
   height: 18px;
-}
-
-.pagination__text {
-  margin: 0 auto;
-  display: inline-block;
-  overflow: hidden;
-  max-width: 320px;
-  font-size: 14px;
-  text-overflow: ellipsis;
-  color: $text-color-brightness-75;
-
-  @media (max-width: $phone-width) {
-    font-size: 12px;
-  }
 }
 
 .pagination-container {
