--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -41,14 +41,18 @@
     }
   }
 
-  &__form-input {
-    min-width: 100%;
-  }
-
   &__dates {
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
+  }
+
+  &__block-title {
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-bottom: 3px;
   }
 
   &__guests {
@@ -63,30 +67,6 @@
     flex-direction: column;
   }
 
-  &__availability {
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__rules {
-    margin-bottom: 22px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__comfort {
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__additional-comfort {
-    @media screen and (max-width: $sm-desktop-width) {
-      margin-bottom: 30px;
-    }
-  }
-
   &__range-description {
     margin-top: 15px;
     display: inline-block;
@@ -97,6 +77,24 @@
     @media (max-width: $phone-width) {
       font-size: 10px;
     }
+  }
+
+  &__rules {
+    margin-bottom: 22px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__availability {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__comfort {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
   }
 
   &__rooms-title {
@@ -111,6 +109,12 @@
     @media (max-width: $phone-width) {
       font-size: 20px;
       line-height: 25px;
+    }
+  }
+
+  &__rooms-container {
+    @media (max-width: $phone-width) {
+      text-align: center;
     }
   }
 
@@ -135,19 +139,9 @@
     }
   }
 
-  &__rooms-container {
-    @media (max-width: $phone-width) {
-      text-align: center;
-    }
-  }
-
   &__pagination {
-    margin: 40px 0 70px;
+    margin: 40px 13px 70px;
     display: flex;
     justify-content: center;
-  }
-
-  &__pagination-wrapper {
-    margin-right: 13px;
   }
 }
