--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -233,6 +233,29 @@
       @media screen and (max-width: $phone-width) {
         right: 10px;
       }
+
+      #{$self}__burger-layout {
+        top: 0;
+        height: 30px;
+        background-color: $bg-color-primary;
+        border: 2px solid $primary-color;
+        border-radius: 50%;
+        transition: $tr-fast;
+
+        &::after {
+          top: calc(50% - 1px);
+          left: 3px;
+          width: 20px;
+          transform: rotate(45deg);
+        }
+
+        &::before {
+          top: calc(50% - 1px);
+          left: 3px;
+          width: 20px;
+          transform: rotate(-45deg);
+        }
+      }
     }
 
     @media (max-width: $sm-desktop-width) {
@@ -273,29 +296,6 @@
       content: '';
       background-color: $primary-color;
       border-radius: 50px;
-    }
-
-    &_active {
-      top: 0;
-      height: 30px;
-      background-color: $bg-color-primary;
-      border: 2px solid $primary-color;
-      border-radius: 50%;
-      transition: $tr-fast;
-
-      &::after {
-        top: calc(50% - 1px);
-        left: 3px;
-        width: 20px;
-        transform: rotate(45deg);
-      }
-
-      &::before {
-        top: calc(50% - 1px);
-        left: 3px;
-        width: 20px;
-        transform: rotate(-45deg);
-      }
     }
 
     @media (max-width: $sm-desktop-width) {
