--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,3 +1,3 @@
 mixin logo()
-	svg.logo.logo_colored(aria-label='toxin logo')
+	svg(aria-label='toxin logo').logo.logo_colored
 		use(xlink:href='#logo-colored')
