--- a/src/components/toggle-buttons/toggle-buttons.pug
+++ b/src/components/toggle-buttons/toggle-buttons.pug
@@ -2,6 +2,6 @@ mixin toggle-buttons()
   .toggle-buttons
     .toggle-buttons__container
       label.toggle-buttons__label 
-        input.toggle-buttons__checkbox(type="checkbox")
-        span.toggle-buttons__checkmark(tabindex="0")
+        input(type="checkbox").toggle-buttons__checkbox
+        span(tabindex="0").toggle-buttons__checkmark
         span.toggle-buttons__subtitle Получать спецпредложения 
