--- a/src/components/masked-text-field/masked-text-field.pug
+++ b/src/components/masked-text-field/masked-text-field.pug
@@ -2,4 +2,4 @@ mixin masked-text-field({ title, name, placeholder, className })
   label.masked-text-field
     if title
       span.masked-text-field__title #{title}
-    input.masked-text-field__input.js-masked-text-field__input(type=type placeholder=placeholder name=name)
+    input(type=type placeholder=placeholder name=name).masked-text-field__input.js-masked-text-field__input
