--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,3 +1,3 @@
 mixin logo()
-	svg(aria-label='toxin logo').logo.logo_colored
+	svg(aria-label='toxin logo').logo
 		use(xlink:href='#logo-colored')
