#38 deleted date-dropdown/minor fix

--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,4 +1,4 @@
-mixin date-dropdown({ classNameFirstInput, classNameSecondInput, title, titleSecond })
+mixin date-dropdown({ title, titleSecond })
   .date-dropdown.js-date-dropdown
     label.date-dropdown__label
       span.date-dropdown__title
