--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -183,6 +183,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 
     @media screen and (max-width: $sm-desktop-width) {
       margin-bottom: 20px;
