#38 simplified the methods of datepicker

--- a/src/components/card-book/card-book.scss
+++ b/src/components/card-book/card-book.scss
@@ -1,5 +1,5 @@
 @import '~components/date-dropdown/date-dropdown';
-@import '~components/datepicker/datepicker';
+@import '~utils/scss/plugins/datepicker.scss';
 @import '~components/dropdown-choose/dropdown-choose';
 
 .card-book {
