--- a/src/components/card-selection/card-selection.scss
+++ b/src/components/card-selection/card-selection.scss
@@ -1,7 +1,7 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/date-dropdown/date-dropdown';
-@import '~components/datepicker/datepicker';
+@import '~utils/scss/plugins/datepicker.scss';
 
 .card-selection {
   width: 100%;
