--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -6,7 +6,7 @@
 @import '~components/footer/footer';
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
-@import '~components/datepicker/datepicker';
+@import '~utils/scss/plugins/datepicker.scss';
 @import '~components/card-room/card-room';
 @import '~components/range-slider/range-slider';
 @import '~components/checkbox/checkbox';
